--- a/.tarvis.yml
+++ b/.tarvis.yml
@@ -4,6 +4,8 @@ node_js:
 os: linux		
 dist: trusty		
 sudo: required
+services:
+  - docker
 dotnet: 1.0.1
 before_install:
 - export CHROME_BIN=chromium-browser
