--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
 after_success:
   - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
-  - docker build -f Dockerfile -t $REPO:$COMMIT .
-  - docker tag $REPO:$COMMIT $REPO:$TAG
-  - docker tag $REPO:$COMMIT $REPO:travis-$TRAVIS_BUILD_NUMBER
-  - docker push $REPO
+  - docker build -f Dockerfile -t $DOCKER_USER$REPO:$COMMIT .
+  - docker tag $DOCKER_USER$REPO:$COMMIT $DOCKER_USER$REPO:$TAG
+  - docker tag $DOCKER_USER$REPO:$COMMIT $DOCKER_USER$REPO:travis-$TRAVIS_BUILD_NUMBER
+  - docker push $DOCKER_USER$REPO
