--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,5 @@ script:
 - dotnet publish -c Release -o out
 after_success:
   - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-  - docker build -f Dockerfile -t $DOCKER_USER$REPO: .
+  - docker build -f Dockerfile -t $DOCKER_USER$REPO .
   - docker push $DOCKER_USER$REPO
